# linux

Cmake_sln_sample/: cmake_help.txt
Cmake_sln_sample/Cmake_sln_sample/: CMakeLists.txt  cmake_help.txt  tutorial.cxx
Cmake_sln_sample/Cmake_sln_sample/AddDLL/: AddDLL.cpp  AddDLL.h  CMakeLists.txt
Cmake_sln_sample/Cmake_sln_sample/AddLib/: AddLib.cpp  AddLib.h  CMakeLists.txt
Cmake_sln_sample/Cmake_sln_sample/AddLib2/: AddLib2.cpp  AddLib2.h  CMakeLists.txt
Cmake_sln_sample/Cmake_sln_sample/console/: CMakeLists.txt  CMakeLists.txt~  tutorial.cxx
Cmake_sln_sample/hello/: CMakeLists.txt  hello.cpp
code_block_slns/HelloCodeBlocks/: HelloCodeBlocks.cbp  HelloCodeBlocks.depend  HelloCodeBlocks.layout  main.cpp
code_block_slns/HelloCodeBlocks/include/: Test.h
code_block_slns/HelloCodeBlocks/src/: Test.cpp
